--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div id="canvasFallback" class="canvas-fallback" style="display:none">Canvas not supported. Please use a modern browser.</div>
       </div>
       <div class="bet-area">
-        <label>Stake: 🪙<input type="number" id="wager" min="1" value="1"></label>
+        <label>Entry: 🪙<input type="number" id="wager" min="1" value="1"></label>
       </div>
       <div class="actions">
         <button class="btn" id="startBtn">START</button>
